# bing_images

frontend/: .gitignore  Cargo.toml  README.md  index.html  package.json
frontend/src/: main.rs
frontend/src/pages/home/: home.rs
frontend/src/services/: request.rs
frontend/styles/: output.css
service/: .env  Cargo.toml  README.md  Rocket.toml
service/src/: main.rs
service/src/config/: settings.rs
service/src/db/: mod.rs
service/src/models/: bing_image.rs
service/src/routes/: bing_image.rs  mod.rs
